[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoadfe-lstsq"
version = "2024.0.0"
dependencies = ["numpy"]
description = "Sample python package"
requires-python = ">= 3.7"
authors = [
  {name = "Matwey V. Kornilov", email = "mkornilov@hse.ru"},
]
